--- a/build-tools/build-webpack/package.json
+++ b/build-tools/build-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-webpack",
-  "version": "0.2.0-alpha.649a2b68",
+  "version": "0.2.0",
   "license": "MIT",
   "description": "Webpack",
   "main": "webpack.js",
