--- a/src/_patterns/01-core/01-settings/settings-font-weight/package.json
+++ b/src/_patterns/01-core/01-settings/settings-font-weight/package.json
@@ -10,7 +10,7 @@
     "typography",
     "font weight"
   ],
-  "version": "0.7.0-alpha.649a2b68",
+  "version": "0.7.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
