--- a/src/_patterns/01-core/02-tools/tools-px-to-rem/package.json
+++ b/src/_patterns/01-core/02-tools/tools-px-to-rem/package.json
@@ -8,7 +8,7 @@
     "design system",
     "pixel to rem"
   ],
-  "version": "0.1.0-alpha.649a2b68",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
