--- a/src/_patterns/01-core/02-tools/tools-text-contrast/package.json
+++ b/src/_patterns/01-core/02-tools/tools-text-contrast/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -34,6 +34,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-color-palette": "^0.4.0-alpha.649a2b68"
+    "@bolt/tools-color-palette": "^0.4.0"
   }
 }
