--- a/src/_patterns/01-core/03-generic/generic-reset/package.json
+++ b/src/_patterns/01-core/03-generic/generic-reset/package.json
@@ -8,7 +8,7 @@
     "design system",
     "generic"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,7 +35,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-global": "^0.6.0-alpha.649a2b68",
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68"
+    "@bolt/settings-global": "^0.6.0",
+    "@bolt/tools-spacing": "^0.4.0"
   }
 }
