--- a/src/_patterns/01-core/04-elements/elements-images/package.json
+++ b/src/_patterns/01-core/04-elements/elements-images/package.json
@@ -10,7 +10,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.2.0-alpha.649a2b68",
+  "version": "0.2.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
