--- a/src/_patterns/01-core/05-objects/02-layout/bolt-block/package.json
+++ b/src/_patterns/01-core/05-objects/02-layout/bolt-block/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,6 +35,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "0.4.0-alpha.649a2b68"    
+    "@bolt/tools-spacing": "^0.4.0"
   }
 }
