--- a/src/_patterns/02-components/bolt-card/package.json
+++ b/src/_patterns/02-components/bolt-card/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -38,7 +38,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-color-palette": "^0.4.0-alpha.649a2b68"
+    "@bolt/tools-color-palette": "^0.4.0",
+    "@bolt/tools-spacing": "^0.4.0"
   }
 }
