--- a/src/_patterns/02-components/bolt-chip-list/package.json
+++ b/src/_patterns/02-components/bolt-chip-list/package.json
@@ -9,7 +9,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.1.0-alpha.649a2b68",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,7 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-chip": "^0.1.0-alpha.649a2b68",
-    "@bolt/objects-inline-list": "^0.3.0-alpha.649a2b68"
+    "@bolt/components-chip": "^0.1.0",
+    "@bolt/objects-inline-list": "^0.3.0"
   }
 }
