--- a/src/_patterns/02-components/bolt-critical-path/package.json
+++ b/src/_patterns/02-components/bolt-critical-path/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-critical-path",
-  "version": "0.1.0-alpha.649a2b68",
+  "version": "0.1.0",
   "description": "Bolt Collection of Critical Path JS",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "dependencies": {
-    "@bolt/components-font-loader": "^0.2.0-alpha.649a2b68"
+    "@bolt/components-font-loader": "^0.2.0"
   },
   "publishConfig": {
     "access": "public"
