--- a/src/_patterns/02-components/bolt-font-loader/package.json
+++ b/src/_patterns/02-components/bolt-font-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-font-loader",
-  "version": "0.2.0-alpha.649a2b68",
+  "version": "0.2.0",
   "description": "Async font loader",
   "repository": {
     "type": "git",
