--- a/src/_patterns/02-components/bolt-page-footer/package.json
+++ b/src/_patterns/02-components/bolt-page-footer/package.json
@@ -9,7 +9,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.3.0-alpha.649a2b68",
+  "version": "0.3.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
