--- a/build-tools/build-core/package.json
+++ b/build-tools/build-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-core",
-  "version": "0.3.0-alpha.649a2b68",
+  "version": "0.3.0",
   "license": "MIT",
   "description": "Build tools core",
   "main": "index.js",
