--- a/build-tools/build-slack/package.json
+++ b/build-tools/build-slack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-slack",
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "license": "MIT",
   "description": "Build tools Slack",
   "main": "index.js",
