--- a/src/_patterns/01-core/01-settings/settings-breakpoints/package.json
+++ b/src/_patterns/01-core/01-settings/settings-breakpoints/package.json
@@ -8,7 +8,7 @@
     "design system",
     "breakpoints"
   ],
-  "version": "0.6.0-alpha.649a2b68",
+  "version": "0.6.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
