--- a/src/_patterns/01-core/01-settings/settings-font-size/package.json
+++ b/src/_patterns/01-core/01-settings/settings-font-size/package.json
@@ -9,7 +9,7 @@
     "typography",
     "modular scale"
   ],
-  "version": "0.7.0-alpha.649a2b68",
+  "version": "0.7.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,10 +36,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-breakpoints": "^0.6.0-alpha.649a2b68",
-    "@bolt/settings-global": "^0.6.0-alpha.649a2b68",
-    "@bolt/tools-breakpoint": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-px-to-rem": "^0.1.0-alpha.649a2b68"
+    "@bolt/settings-breakpoints": "^0.6.0",
+    "@bolt/settings-global": "^0.6.0",
+    "@bolt/tools-breakpoint": "^0.1.0",
+    "@bolt/tools-px-to-rem": "^0.1.0"
   },
   "scripts": {
     "getName": "echo $npm_package_name"
