--- a/src/_patterns/01-core/02-tools/tools-all/package.json
+++ b/src/_patterns/01-core/02-tools/tools-all/package.json
@@ -9,7 +9,7 @@
     "itcss",
     "tools"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,29 +36,29 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-breakpoint": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-button-color": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-clearfix": "^0.5.0-alpha.649a2b68",
-    "@bolt/tools-color-palette": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-export-data": "^0.5.0-alpha.649a2b68",
-    "@bolt/tools-font-face": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-font-family": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-kerning": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-size": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-weight": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-linear-interpolation": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-list-remove": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-list-sort": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-map-sort": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-no-select": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-poly-fluid-sizing": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-px-to-rem": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-sassy-maps": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-scrolling": "^0.5.0-alpha.649a2b68",
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-strip-unit": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-text-contrast": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-uppercase": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-visuallyhidden": "^0.5.0-alpha.649a2b68"
+    "@bolt/tools-breakpoint": "^0.1.0",
+    "@bolt/tools-button-color": "^0.4.0",
+    "@bolt/tools-clearfix": "^0.5.0",
+    "@bolt/tools-color-palette": "^0.4.0",
+    "@bolt/tools-export-data": "^0.5.0",
+    "@bolt/tools-font-face": "^0.1.0",
+    "@bolt/tools-font-family": "^0.4.0",
+    "@bolt/tools-font-kerning": "^0.4.0",
+    "@bolt/tools-font-size": "^0.4.0",
+    "@bolt/tools-font-weight": "^0.4.0",
+    "@bolt/tools-linear-interpolation": "^0.1.0",
+    "@bolt/tools-list-remove": "^0.1.0",
+    "@bolt/tools-list-sort": "^0.1.0",
+    "@bolt/tools-map-sort": "^0.1.0",
+    "@bolt/tools-no-select": "^0.4.0",
+    "@bolt/tools-poly-fluid-sizing": "^0.1.0",
+    "@bolt/tools-px-to-rem": "^0.1.0",
+    "@bolt/tools-sassy-maps": "^0.4.0",
+    "@bolt/tools-scrolling": "^0.5.0",
+    "@bolt/tools-spacing": "^0.4.0",
+    "@bolt/tools-strip-unit": "^0.4.0",
+    "@bolt/tools-text-contrast": "^0.4.0",
+    "@bolt/tools-uppercase": "^0.1.0",
+    "@bolt/tools-visuallyhidden": "^0.5.0"
   }
 }
