--- a/src/_patterns/01-core/02-tools/tools-color-palette/package.json
+++ b/src/_patterns/01-core/02-tools/tools-color-palette/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -34,8 +34,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-colors": "^0.5.0-alpha.649a2b68",
-    "@bolt/tools-sassy-maps": "^0.4.0-alpha.649a2b68"
+    "@bolt/settings-colors": "^0.5.0",
+    "@bolt/tools-sassy-maps": "^0.4.0"
   },
   "scripts": {
     "getName": "echo $npm_package_name"
