--- a/src/_patterns/01-core/02-tools/tools-font-family/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-family/package.json
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,8 +35,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-family": "^0.6.0-alpha.649a2b68",
-    "@bolt/tools-sassy-maps": "^0.4.0-alpha.649a2b68"
+    "@bolt/settings-font-family": "^0.6.0",
+    "@bolt/tools-sassy-maps": "^0.4.0"
   },
   "private": false
 }
