--- a/src/_patterns/01-core/02-tools/tools-font-weight/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-weight/package.json
@@ -10,7 +10,7 @@
     "typography",
     "font weight"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -37,8 +37,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-weight": "^0.7.0-alpha.649a2b68",
-    "@bolt/tools-sassy-maps": "^0.4.0-alpha.649a2b68"
+    "@bolt/settings-font-weight": "^0.7.0",
+    "@bolt/tools-sassy-maps": "^0.4.0"
   },
   "private": false
 }
