--- a/src/_patterns/01-core/02-tools/tools-list-remove/package.json
+++ b/src/_patterns/01-core/02-tools/tools-list-remove/package.json
@@ -9,7 +9,7 @@
     "design system",
     "list-remove"
   ],
-  "version": "0.1.0-alpha.649a2b68",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
