--- a/src/_patterns/01-core/02-tools/tools-sassy-maps/package.json
+++ b/src/_patterns/01-core/02-tools/tools-sassy-maps/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
