--- a/src/_patterns/01-core/02-tools/tools-spacing/package.json
+++ b/src/_patterns/01-core/02-tools/tools-spacing/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -34,7 +34,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-spacing": "^0.6.0-alpha.649a2b68",
-    "@bolt/tools-strip-unit": "^0.4.0-alpha.649a2b68"
+    "@bolt/settings-spacing": "^0.6.0",
+    "@bolt/tools-strip-unit": "^0.4.0"
   }
 }
