--- a/src/_patterns/01-core/03-generic/generic-global/package.json
+++ b/src/_patterns/01-core/03-generic/generic-global/package.json
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,6 +35,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-font-kerning": "^0.4.0-alpha.649a2b68"
+    "@bolt/tools-font-kerning": "^0.4.0"
   }
 }
