--- a/src/_patterns/01-core/04-elements/elements-code/package.json
+++ b/src/_patterns/01-core/04-elements/elements-code/package.json
@@ -8,7 +8,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.2.0-alpha.649a2b68",
+  "version": "0.2.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,10 +35,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-scrolling": "^0.5.0-alpha.649a2b68",
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-family": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-weight": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-size": "^0.4.0-alpha.649a2b68"
+    "@bolt/tools-font-family": "^0.4.0",
+    "@bolt/tools-font-size": "^0.4.0",
+    "@bolt/tools-font-weight": "^0.4.0",
+    "@bolt/tools-scrolling": "^0.5.0",
+    "@bolt/tools-spacing": "^0.4.0"
   }
 }
