--- a/src/_patterns/01-core/05-objects/02-layout/bolt-grid/package.json
+++ b/src/_patterns/01-core/05-objects/02-layout/bolt-grid/package.json
@@ -12,7 +12,7 @@
     "objects",
     "grid"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
