--- a/src/_patterns/01-core/05-objects/02-layout/bolt-wrapper/package.json
+++ b/src/_patterns/01-core/05-objects/02-layout/bolt-wrapper/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -39,7 +39,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68",
-    "@bolt/settings-breakpoints": "^0.6.0-alpha.649a2b68"
+    "@bolt/settings-breakpoints": "^0.6.0",
+    "@bolt/tools-spacing": "^0.4.0"
   }
 }
