--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.5.0-alpha.649a2b68",
+  "version": "0.5.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
