--- a/src/_patterns/02-components/bolt-headline/package.json
+++ b/src/_patterns/02-components/bolt-headline/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.4.0-alpha.649a2b68",
+  "version": "0.4.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -27,10 +27,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-uppercase": "^0.1.0-alpha.649a2b68",
-    "@bolt/tools-font-family": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-weight": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-font-size": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68"
+    "@bolt/tools-font-family": "^0.4.0",
+    "@bolt/tools-font-size": "^0.4.0",
+    "@bolt/tools-font-weight": "^0.4.0",
+    "@bolt/tools-spacing": "^0.4.0",
+    "@bolt/tools-uppercase": "^0.1.0"
   }
 }
