--- a/src/_patterns/02-components/bolt-logo/package.json
+++ b/src/_patterns/02-components/bolt-logo/package.json
@@ -13,7 +13,7 @@
     "image",
     "logo"
   ],
-  "version": "0.1.0-alpha.649a2b68",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.4.0-alpha.649a2b68",
-    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68"
+    "@bolt/objects-ratio": "^0.4.0",
+    "@bolt/tools-spacing": "^0.4.0"
   }
 }
