--- a/src/_patterns/03-templates/templates-default/package.json
+++ b/src/_patterns/03-templates/templates-default/package.json
@@ -9,7 +9,7 @@
     "design system",
     "templates"
   ],
-  "version": "0.1.0-alpha.649a2b68",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
