--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
       "aleksip/plugin-data-transform": "^1.1.0",
       "evanlovely/plugin-twig-namespaces": "dev-master",
       "oomphinc/composer-installers-extender": "dev-master",
-      "bolt/twig-extensions": "*"
+      "bolt/twig-extensions": "*",
+        "gajus/dindent": "dev-master"
     },
     "config": {
         "process-timeout": 0,
