fix: fixing beautify html patch + faster composer install

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "repositories": [
       {
         "type": "vcs",
-        "url": "https://github.com/drupal-pattern-lab/patternlab-php-core"
+        "url": "https://github.com/drupal-pattern-lab/patternlab-php-core",
+        "no-api": true
       },
       {
         "type": "path",
@@ -39,11 +40,13 @@
       },
       {
         "type": "vcs",
-        "url": "https://github.com/drupal-pattern-lab/patternengine-php-twig"
+        "url": "https://github.com/drupal-pattern-lab/patternengine-php-twig",
+        "no-api": true
       },
       {
         "type": "vcs",
-        "url": "https://github.com/drupal-pattern-lab/styleguidekit-twig-default"
+        "url": "https://github.com/drupal-pattern-lab/styleguidekit-twig-default",
+        "no-api": true
       }
     ],
     "minimum-stability": "dev",
