--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mocha:build-tools": "mocha ./build-tools/**/tests/*.test.js",
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
     "deploy": "node build-tools/build-slack/index.js",
-    "postinstall": "npm run bootstrap && npm run setup:composer",
+    "postinstall": "npm run bootstrap && npm run install:composer",
     "prepublishOnly": "npm run snyk-protect",
     "publish-beta": "lerna run build && lerna publish --npm-tag=beta --skip-git",
     "publish-canary": "lerna run build && lerna run publish-please && lerna publish --canary --yes",
@@ -31,6 +31,7 @@
     "publish": "lerna run build && lerna run publish-please && lerna publish --no-git",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "serve": "gulp serve",
+    "install:composer": "rm ./bolt-website/index.html && npm run setup:composer",
     "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer install --no-interaction --prefer-dist --no-dev; fi",
     "setup:homebrew": "sh scripts/install-homebrew.sh",
     "snyk-protect": "snyk protect",
