WIP: card image, body, and footer

--- a/config/config.yml
+++ b/config/config.yml
@@ -81,6 +81,7 @@ plugins:
           - src/_patterns/02-components/bolt-button-group/src
           - src/_patterns/02-components/bolt-button/demos
           - src/_patterns/02-components/bolt-button/src
+          - src/_patterns/02-components/bolt-card/demo
           - src/_patterns/02-components/bolt-card/src
           - src/_patterns/02-components/bolt-chip-list
           - src/_patterns/02-components/bolt-chip/lib
