fix: refactored css and twig, plus color update

--- a/src/_patterns/01-core/01-settings/settings-global/package.json
+++ b/src/_patterns/01-core/01-settings/settings-global/package.json
@@ -36,5 +36,8 @@
   },
   "scripts": {
     "getName": "echo $npm_package_name"
+  },
+  "dependencies": {
+    "@bolt/tools-color-palette": "^0.4.0"
   }
 }
