WIP: ordered list

--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "@bolt/components-page-footer": "^0.3.0",
     "@bolt/components-site": "^0.4.0",
     "@bolt/components-teaser": "^0.1.0",
+    "@bolt/components-ordered-list": "^0.0.0",
     "@bolt/elements-all": "^0.4.0",
     "@bolt/elements-headings": "^0.3.0",
     "@bolt/elements-page": "^0.4.0",
