--- a/config/config.yml
+++ b/config/config.yml
@@ -93,6 +93,7 @@ plugins:
           - src/_patterns/02-components/bolt-image/src
           - src/_patterns/02-components/bolt-link
           - src/_patterns/02-components/bolt-logo/src
+          - src/_patterns/02-components/bolt-ordered-list/src
           - src/_patterns/02-components/bolt-page-footer/lib
           - src/_patterns/02-components/bolt-page-footer/src
           - src/_patterns/02-components/bolt-quote
