fix: fixing a few patterns that got moved around

--- a/config/config.yml
+++ b/config/config.yml
@@ -55,10 +55,8 @@ plugins:
     namespaces:
       bolt:
         paths:
-          - >-
-            src/_patterns/01-core/01-settings/settings-breakpoints/settings-colors/demos
-          - >-
-            src/_patterns/01-core/01-settings/settings-breakpoints/settings-colors/src/twig
+          - src/_patterns/01-core/01-settings/settings-colors/demos
+          - src/_patterns/01-core/01-settings/settings-colors/src/twig
           - src/_patterns/01-core/02-tools/tools-spacing/demos
           - src/_patterns/01-core/04-elements/elements-headings
           - src/_patterns/01-core/04-elements/elements-links
