--- a/config/config.yml
+++ b/config/config.yml
@@ -82,6 +82,7 @@ plugins:
           - src/_patterns/02-components/bolt-background/src
           - src/_patterns/02-components/bolt-band/demo
           - src/_patterns/02-components/bolt-band/src
+          - src/_patterns/02-components/bolt-blockquote/src
           - src/_patterns/02-components/bolt-card/demo
           - src/_patterns/02-components/bolt-card/src
           - src/_patterns/02-components/bolt-chip-list
