--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "@bolt/components-band": "^0.1.0",
     "@bolt/components-button": "^0.5.0",
     "@bolt/components-button-group": "^0.1.0",
+    "@bolt/components-blockquote": "^0.0.0",
     "@bolt/components-card": "^0.4.0",
     "@bolt/components-chip": "^0.1.0",
     "@bolt/components-chip-list": "^0.1.0",
