--- a/config/config.yml
+++ b/config/config.yml
@@ -97,5 +97,7 @@ plugins:
           - src/_patterns/02-components/bolt-quote
           - src/_patterns/02-components/bolt-teaser/src/twig
           - src/_patterns/03-templates/templates-default
-          - src/_patterns/04-pages
+          - src/_patterns/04-pages/bolt-homepage
+          - src/_patterns/04-pages/d8-homepage
+          - src/_patterns/04-pages/d8-resource-details
     roots: {}
