--- a/src/_patterns/02-components/bolt-image/package.json
+++ b/src/_patterns/02-components/bolt-image/package.json
@@ -38,7 +38,6 @@
   },
   "dependencies": {
     "@bolt/objects-ratio": "^0.5.0-alpha.d819772a",
-    "intersection-observer": "^0.4.2",
-    "lozad": "^1.0.6"
+    "lazysizes": "^4.0.0-rc4"
   }
 }
