--- a/config/config.yml
+++ b/config/config.yml
@@ -99,4 +99,5 @@ plugins:
           - src/_patterns/03-templates/templates-default
           - src/_patterns/04-pages/bolt-homepage
           - src/_patterns/04-pages/d8-homepage
+          - src/_patterns/04-pages/d8-resource-details
     roots: {}
