--- a/src/_patterns/02-components/bolt-ordered-list/package.json
+++ b/src/_patterns/02-components/bolt-ordered-list/package.json
@@ -38,6 +38,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "^0.4.0"
+    "@bolt/settings-colors": "^0.4.0",
+    "@bolt/settings-font-size": "^0.8.0-alpha.7f2394d7",
+    "@bolt/settings-font-weight": "^0.8.0-alpha.7f2394d7",
+    "@bolt/tools-spacing": "^0.4.0",
+    "@bolt/tools-color-palette": "^0.4.0"
   }
 }
