--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "@bolt/components-band": "^0.2.0-alpha.7f2394d7",
     "@bolt/components-button": "^0.6.0-alpha.7f2394d7",
     "@bolt/components-button-group": "^0.2.0-alpha.7f2394d7",
+    "@bolt/components-blockquote": "^0.0.0",
     "@bolt/components-card": "^0.5.0-alpha.7f2394d7",
     "@bolt/components-chip": "^0.2.0-alpha.7f2394d7",
     "@bolt/components-chip-list": "^0.2.0-alpha.7f2394d7",
@@ -18,6 +19,7 @@
     "@bolt/components-headline": "^0.5.0-alpha.7f2394d7",
     "@bolt/components-image": "^0.2.0-alpha.7f2394d7",
     "@bolt/components-logo": "^0.2.0-alpha.7f2394d7",
+    "@bolt/components-ordered-list": "^0.0.0",
     "@bolt/components-page-footer": "^0.4.0-alpha.7f2394d7",
     "@bolt/components-site": "^0.5.0-alpha.7f2394d7",
     "@bolt/components-teaser": "^0.2.0-alpha.d819772a",
