--- a/build-tools/build-icons/package.json
+++ b/build-tools/build-icons/package.json
@@ -23,5 +23,20 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "fs-extra": "^4.0.2",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-filter": "^5.0.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.0",
+    "gulp-util": "^3.0.8",
+    "md5-file": "^3.2.3",
+    "merge": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "path": "^0.12.7",
+    "through2": "^2.0.3"
   }
 }
