--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.3.0-alpha.4",
   "description": "Pega Digital Design System",
   "private": true,
+  "files": [
+    "dist/"
+  ],
+  "browser": "dist/bolt.js",
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "npm run setup:composer && gulp build --prod",
@@ -39,7 +43,11 @@
     "start:server": "nodemon --watch packages/bolt-common src/json-server.js",
     "test": "npm run mocha",
     "pretest": "npm run lint:scss && node scripts/check-imports.js",
-    "prepare": "npm run snyk-protect"
+    "prepare": "npm run snyk-protect",
+    "stencil:build": "stencil build --prerender",
+    "stencil:dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
+    "stencil:serve": "stencil-dev-server",
+    "stencil:start": "npm run stencil:dev"
   },
   "pre-commit": [
     "test",
@@ -82,8 +90,14 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "homepage": "https://github.com/bolt-design-system/bolt#readme",
+  "devDependencies": {
+    "@stencil/dev-server": "0.0.17",
+    "@stencil/utils": "0.0.4"
+  },
   "dependencies": {
-    "@skatejs/renderer-lit-html": "0.0.0",
+    "@stencil/core": "0.0.6-0",
+    "@stencil/router": "0.0.9",
+    "@times-components/brightcove-video": "^1.4.0",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
@@ -148,6 +162,7 @@
     "stylefmt": "6.0.0",
     "stylelint": "8.0.0",
     "stylelint-scss": "^2.0.1",
+    "svg-injector": "^1.1.3",
     "validate-commit-msg": "^2.12.2"
   },
   "babel": {
