--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,13 @@
         "no-api": true
       },
       {
-        "type": "path",
-        "url": "packages/bolt-twig-extensions"
+        "type": "vcs",
+        "url": "https://github.com/drupal-pattern-lab/patternengine-php-twig",
+        "no-api": true
       },
       {
         "type": "path",
-        "url": "packages/patternengine-twig"
+        "url": "packages/bolt-twig-extensions"
       },
       {
         "type": "vcs",
