feat: adding pattern_template function for dynamic template references

--- a/config/config.yml
+++ b/config/config.yml
@@ -55,6 +55,7 @@ plugins:
     namespaces:
       bolt:
         paths:
+          - src/_patterns/00-utils
           - src/_patterns/01-core/01-settings/settings-colors/demos
           - src/_patterns/01-core/01-settings/settings-colors/src/twig
           - src/_patterns/01-core/02-tools/tools-spacing/demos
