--- a/packages/bolt-twig-extensions/composer.json
+++ b/packages/bolt-twig-extensions/composer.json
@@ -20,7 +20,9 @@
   "require": {
     "ksubileau/color-thief-php": "^1.3",
     "gregwar/image": "*",
-    "mexitek/phpcolors": "^0.4.0"
+    "mexitek/phpcolors": "^0.4.0",
+    "justinrainbow/json-schema": "^5.2",
+    "symfony/yaml": "^3.3"
   },
   "extra": {
     "installer-name": "_twig-components"
