WIP: fixing a few bugs from merge

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ cache
 
 ## installed to src/_twig-components via composer
 src/_twig-components
+src/_patterns/**/dist
+
 
 lerna-debug.log
 node_modules
