--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -144,6 +144,10 @@ flag:
   filename: flag.twig
   path: src/_patterns/01-core/05-objects/02-layout/bolt-flag/src/flag.twig
   namespace: '@bolt/flag.twig'
+gcd:
+  filename: _gcd.twig
+  path: src/_patterns/02-components/bolt-image/src/_gcd.twig
+  namespace: '@bolt/_gcd.twig'
 grid:
   filename: grid.twig
   path: src/_patterns/01-core/05-objects/02-layout/bolt-grid/grid.twig
