--- a/src/_patterns/02-components/bolt-chip/package.json
+++ b/src/_patterns/02-components/bolt-chip/package.json
@@ -34,5 +34,12 @@
   "style": "src/_chip.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/settings-global": "^0.7.0-alpha.7f2394d7",
+    "@bolt/settings-font-size": "^0.8.0-alpha.7f2394d7",
+    "@bolt/tools-font-size": "^0.5.0-alpha.7f2394d7",
+    "@bolt/tools-spacing": "^0.5.0-alpha.7f2394d7",
+    "@bolt/tools-color-palette": "^0.5.0-alpha.7f2394d7"
   }
 }
