--- a/src/_patterns/02-components/bolt-unordered-list/package.json
+++ b/src/_patterns/02-components/bolt-unordered-list/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/components-ordered-list",
-  "description": "Ordered-list Component in Bolt",
+  "name": "@bolt/components-unordered-list",
+  "description": "Unordered-list Component in Bolt",
   "type": "pattern",
   "patternType": "molecules",
   "keywords": [
@@ -32,17 +32,13 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/ordered-list.scss",
-  "twig": "src/ordered-list.twig",
+  "style": "src/unordered-list.scss",
+  "twig": "src/unordered-list.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/settings-colors": "^0.4.0",
-    "@bolt/settings-font-size": "^0.8.0-alpha.7f2394d7",
-    "@bolt/settings-font-weight": "^0.8.0-alpha.7f2394d7",
-    "@bolt/tools-font-size": "^0.5.0-alpha.7f2394d7",
-    "@bolt/tools-font-weight": "^0.5.0-alpha.7f2394d7",
     "@bolt/tools-spacing": "^0.4.0",
     "@bolt/tools-color-palette": "^0.4.0"
   }
