--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "@bolt/components-image": "^0.2.0-alpha.7f2394d7",
     "@bolt/components-logo": "^0.2.0-alpha.7f2394d7",
     "@bolt/components-ordered-list": "^0.0.0",
+    "@bolt/components-unordered-list": "^0.0.0",
     "@bolt/components-page-footer": "^0.4.0-alpha.7f2394d7",
     "@bolt/components-site": "^0.5.0-alpha.7f2394d7",
     "@bolt/components-teaser": "^0.2.0-alpha.d819772a",
