feat: globally updating items to contentItems, iterating on card filtering logic

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ vendor
 
 ## static bolt site / pattern lab instance built locally
 bolt-website
+navItems.html
+src/_patternsnavitems.html
+src/_patternspatterns.html
+src/_patternspatternStore.html
+src/_patternspatternSubtype.html
+src/_patternspatternType.html
