--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,6 @@
     "repositories": [
       {
         "type": "vcs",
-        "url": "https://github.com/drupal-pattern-lab/patternlab-php-core",
-        "no-api": true
-      },
-      {
-        "type": "vcs",
         "url": "https://github.com/drupal-pattern-lab/patternengine-php-twig",
         "no-api": true
       },
@@ -54,7 +49,7 @@
       "php": ">=7.0",
       "twig/twig": "^1.35.0",
       "cweagans/composer-patches": "~1.0",
-      "pattern-lab/core": "^2.8.1",
+      "pattern-lab/core": "^2.8.5",
       "pattern-lab/patternengine-twig": "*",
       "pattern-lab/styleguidekit-twig-default": "^3.0.0",
       "pattern-lab/styleguidekit-assets-default": "*",
@@ -62,7 +57,8 @@
       "oomphinc/composer-installers-extender": "dev-master",
       "bolt/twig-extensions": "*",
       "gajus/dindent": "dev-master",
-      "symfony/yaml": "*"
+      "symfony/yaml": "*",
+        "phpextra/sorter": "^1.0@dev"
     },
     "config": {
         "process-timeout": 0,
