fix: fixing async font loader -- updated webpack build path

--- a/config/config.yml
+++ b/config/config.yml
@@ -41,7 +41,7 @@ lineageMatch: >-
   |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}
 lineageMatchKey: 3
 patternExtension: twig
-twigDebug: true
+twigDebug: false
 twigAutoescape: false
 twigDefaultDateFormat: ''
 twigDefaultIntervalFormat: ''
@@ -110,3 +110,5 @@ plugins:
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-resource-details
     roots: {}
+ishMinimum: '240'
+ishMaximum: '2600'
