--- a/bolt-manifest.json
+++ b/bolt-manifest.json
@@ -1,9 +1,7 @@
 {
   "name": "Bolt Manifest",
-  "./bolt-website/scripts/bolt-app.js": "/./bolt-website/scripts/bolt-app.js",
-  "./bolt-website/scripts/bolt-app.js.map": "/./bolt-website/scripts/bolt-app.js.map",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css?845a092c2f0c822dd404-616e045f5efdcc4c078b-068436c1e69b6ca318b86bc776a9c75f-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css.map": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css.map?845a092c2f0c822dd404-616e045f5efdcc4c078b-068436c1e69b6ca318b86bc776a9c75f-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js.map": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js.map"
+  "./bolt-website/scripts/bolt-app.js": "/./bolt-website/scripts/bolt-app.min.js",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.css?815d193ea16f51ad4091-be2777cdd594034f0f58-8d6a41b1dc62cdb3e1032d83f2d453f6-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css.map": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.css.map?815d193ea16f51ad4091-be2777cdd594034f0f58-8d6a41b1dc62cdb3e1032d83f2d453f6-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.js"
 }
