chore: updating .gitignore + removing dist folder assets from git

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ cache
 ## installed to src/_twig-components via composer
 src/_twig-components
 src/_patterns/**/dist
+src/_patterns/**/dist/*
+
 
 
 lerna-debug.log
