chore: adding updated manifest

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -62,6 +62,35 @@ block:
   filename: block.twig
   path: src/_patterns/01-core/05-objects/02-layout/bolt-block/src/block.twig
   namespace: '@bolt/block.twig'
+blockquote:
+  filename: blockquote.twig
+  path: src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
+  namespace: '@bolt/blockquote.twig'
+blockquote__theme_demo:
+  filename: blockquote--theme-demo.twig
+  path: >-
+    src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
+  namespace: '@bolt/blockquote--theme-demo.twig'
+blockquote_theme_demo__dark:
+  filename: 03-blockquote-theme-demo--dark.twig
+  path: >-
+    src/_patterns/02-components/bolt-blockquote/demo/theming/03-blockquote-theme-demo--dark.twig
+  namespace: '@bolt/03-blockquote-theme-demo--dark.twig'
+blockquote_theme_demo__light:
+  filename: 02-blockquote-theme-demo--light.twig
+  path: >-
+    src/_patterns/02-components/bolt-blockquote/demo/theming/02-blockquote-theme-demo--light.twig
+  namespace: '@bolt/02-blockquote-theme-demo--light.twig'
+blockquote_theme_demo__xdark:
+  filename: 04-blockquote-theme-demo--xdark.twig
+  path: >-
+    src/_patterns/02-components/bolt-blockquote/demo/theming/04-blockquote-theme-demo--xdark.twig
+  namespace: '@bolt/04-blockquote-theme-demo--xdark.twig'
+blockquote_theme_demo__xlight:
+  filename: 01-blockquote-theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/bolt-blockquote/demo/theming/01-blockquote-theme-demo--xlight.twig
+  namespace: '@bolt/01-blockquote-theme-demo--xlight.twig'
 bolt_homepage:
   filename: bolt-homepage.twig
   path: src/_patterns/04-pages/bolt-homepage/bolt-homepage.twig
@@ -136,6 +165,10 @@ default_template:
   filename: default-template.twig
   path: src/_patterns/03-templates/templates-default/default-template.twig
   namespace: '@bolt/default-template.twig'
+demo:
+  filename: demo.twig
+  path: src/_patterns/00-utils/demo.twig
+  namespace: '@bolt/demo.twig'
 eyebrow:
   filename: eyebrow.twig
   path: src/_patterns/02-components/bolt-headline/src/eyebrow.twig
@@ -145,9 +178,9 @@ flag:
   path: src/_patterns/01-core/05-objects/02-layout/bolt-flag/src/flag.twig
   namespace: '@bolt/flag.twig'
 gcd:
-  filename: _gcd.twig
-  path: src/_patterns/02-components/bolt-image/src/_gcd.twig
-  namespace: '@bolt/_gcd.twig'
+  filename: gcd.twig
+  path: src/_patterns/02-components/bolt-image/src/gcd.twig
+  namespace: '@bolt/gcd.twig'
 grid:
   filename: grid.twig
   path: src/_patterns/01-core/05-objects/02-layout/bolt-grid/grid.twig
@@ -201,6 +234,10 @@ island:
   filename: island.twig
   path: src/_patterns/01-core/05-objects/02-layout/bolt-island/src/island.twig
   namespace: '@bolt/island.twig'
+lead:
+  filename: lead.twig
+  path: src/_patterns/02-components/bolt-headline/src/lead.twig
+  namespace: '@bolt/lead.twig'
 link:
   filename: link.twig
   path: src/_patterns/02-components/bolt-link/link.twig
@@ -209,6 +246,35 @@ logo:
   filename: logo.twig
   path: src/_patterns/02-components/bolt-logo/src/logo.twig
   namespace: '@bolt/logo.twig'
+ordered_list:
+  filename: ordered-list.twig
+  path: src/_patterns/02-components/03-bolt-ordered-list/src/ordered-list.twig
+  namespace: '@bolt/ordered-list.twig'
+ordered_list__theme_demo:
+  filename: ordered-list--theme-demo.twig
+  path: >-
+    src/_patterns/02-components/03-bolt-ordered-list/demo/theming/ordered-list--theme-demo.twig
+  namespace: '@bolt/ordered-list--theme-demo.twig'
+ordered_list__theme_demo__dark:
+  filename: 03-ordered-list--theme-demo--dark.twig
+  path: >-
+    src/_patterns/02-components/03-bolt-ordered-list/demo/theming/03-ordered-list--theme-demo--dark.twig
+  namespace: '@bolt/03-ordered-list--theme-demo--dark.twig'
+ordered_list__theme_demo__light:
+  filename: 02-ordered-list--theme-demo--light.twig
+  path: >-
+    src/_patterns/02-components/03-bolt-ordered-list/demo/theming/02-ordered-list--theme-demo--light.twig
+  namespace: '@bolt/02-ordered-list--theme-demo--light.twig'
+ordered_list__theme_demo__xdark:
+  filename: 04-ordered-list--theme-demo--xdark.twig
+  path: >-
+    src/_patterns/02-components/03-bolt-ordered-list/demo/theming/04-ordered-list--theme-demo--xdark.twig
+  namespace: '@bolt/04-ordered-list--theme-demo--xdark.twig'
+ordered_list__theme_demo__xlight:
+  filename: 01-ordered-list--theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/03-bolt-ordered-list/demo/theming/01-ordered-list--theme-demo--xlight.twig
+  namespace: '@bolt/01-ordered-list--theme-demo--xlight.twig'
 page_footer:
   filename: _page-footer.twig
   path: src/_patterns/02-components/bolt-page-footer/src/_page-footer.twig
@@ -253,6 +319,10 @@ text:
   filename: text.twig
   path: src/_patterns/02-components/bolt-headline/src/text.twig
   namespace: '@bolt/text.twig'
+theme_demo:
+  filename: theme-demo.twig
+  path: src/_patterns/00-utils/theme-demo.twig
+  namespace: '@bolt/theme-demo.twig'
 typography:
   filename: _typography.twig
   path: src/_patterns/02-components/bolt-headline/src/_typography.twig
@@ -261,6 +331,35 @@ ui_list:
   filename: ui-list.twig
   path: src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.twig
   namespace: '@bolt/ui-list.twig'
+unordered_list:
+  filename: unordered-list.twig
+  path: src/_patterns/02-components/04-bolt-unordered-list/src/unordered-list.twig
+  namespace: '@bolt/unordered-list.twig'
+unordered_list__theme_demo:
+  filename: unordered-list--theme-demo.twig
+  path: >-
+    src/_patterns/02-components/04-bolt-unordered-list/demo/theming/unordered-list--theme-demo.twig
+  namespace: '@bolt/unordered-list--theme-demo.twig'
+unordered_list__theme_demo__dark:
+  filename: 03-unordered-list--theme-demo--dark.twig
+  path: >-
+    src/_patterns/02-components/04-bolt-unordered-list/demo/theming/03-unordered-list--theme-demo--dark.twig
+  namespace: '@bolt/03-unordered-list--theme-demo--dark.twig'
+unordered_list__theme_demo__light:
+  filename: 02-unordered-list--theme-demo--light.twig
+  path: >-
+    src/_patterns/02-components/04-bolt-unordered-list/demo/theming/02-unordered-list--theme-demo--light.twig
+  namespace: '@bolt/02-unordered-list--theme-demo--light.twig'
+unordered_list__theme_demo__xdark:
+  filename: 04-unordered-list--theme-demo--xdark.twig
+  path: >-
+    src/_patterns/02-components/04-bolt-unordered-list/demo/theming/04-unordered-list--theme-demo--xdark.twig
+  namespace: '@bolt/04-unordered-list--theme-demo--xdark.twig'
+unordered_list__theme_demo__xlight:
+  filename: 01-unordered-list--theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/04-bolt-unordered-list/demo/theming/01-unordered-list--theme-demo--xlight.twig
+  namespace: '@bolt/01-unordered-list--theme-demo--xlight.twig'
 wrapper:
   filename: wrapper.twig
   path: src/_patterns/01-core/05-objects/02-layout/bolt-wrapper/src/wrapper.twig
