fix: removing sorter composer dependency, adding WIP of alt version of homepage w/ quote

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -157,6 +157,10 @@ d8_homepage:
   filename: d8-homepage.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage.twig
   namespace: '@bolt/d8-homepage.twig'
+d8_homepage_alt:
+  filename: d8-homepage-alt.twig
+  path: src/_patterns/04-pages/d8-homepage/d8-homepage-alt.twig
+  namespace: '@bolt/d8-homepage-alt.twig'
 d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
@@ -313,7 +317,7 @@ table:
   namespace: '@bolt/table.twig'
 teaser:
   filename: teaser.twig
-  path: src/_patterns/02-components/bolt-teaser/src/twig/teaser.twig
+  path: src/_patterns/02-components/bolt-teaser/src/teaser.twig
   namespace: '@bolt/teaser.twig'
 text:
   filename: text.twig
