--- a/src/_patterns/01-core/05-objects/03-display/bolt-ratio/package.json
+++ b/src/_patterns/01-core/05-objects/03-display/bolt-ratio/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.5.0-alpha.1ad5601e",
+  "version": "0.5.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
