--- a/src/_patterns/02-components/bolt-image/package.json
+++ b/src/_patterns/02-components/bolt-image/package.json
@@ -37,7 +37,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.5.0-alpha.1ad5601e",
+    "@bolt/objects-ratio": "^0.5.0",
     "lazysizes": "^4.0.0-rc4"
   }
 }
