--- a/src/_patterns/02-components/bolt-logo/package.json
+++ b/src/_patterns/02-components/bolt-logo/package.json
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.5.0-alpha.1ad5601e",
+    "@bolt/objects-ratio": "^0.5.0",
     "@bolt/tools-spacing": "^0.5.0-alpha.1ad5601e"
   }
 }
