--- a/src/package.json
+++ b/src/package.json
@@ -35,7 +35,7 @@
     "@bolt/objects-grid": "^0.5.0-alpha.1ad5601e",
     "@bolt/objects-inline-list": "^0.4.0-alpha.1ad5601e",
     "@bolt/objects-island": "^0.4.0-alpha.1ad5601e",
-    "@bolt/objects-ratio": "^0.5.0-alpha.1ad5601e",
+    "@bolt/objects-ratio": "^0.5.0",
     "@bolt/objects-ui-list": "^0.5.0-alpha.1ad5601e",
     "@bolt/objects-wrapper": "^0.5.0-alpha.1ad5601e",
     "@bolt/settings-all": "^0.7.0-alpha.1ad5601e",
