fix: merge some configs

--- a/src/_patterns/02-components/bolt-critical-fonts/package.json
+++ b/src/_patterns/02-components/bolt-critical-fonts/package.json
@@ -20,7 +20,8 @@
     "@bolt/elements-page": "^0.5.0-alpha.1ad5601e",
     "@bolt/generic-all": "^0.5.0-alpha.1ad5601e",
     "@bolt/settings-all": "^0.7.0-alpha.1ad5601e",
-    "@bolt/tools-all": "^0.5.0-alpha.1ad5601e"
+    "@bolt/tools-all": "^0.5.0-alpha.1ad5601e",
+    "fontfaceobserver": "^2.0.13"
   },
   "publishConfig": {
     "access": "public"
