--- a/src/_patterns/01-core/01-settings/settings-spacing/package.json
+++ b/src/_patterns/01-core/01-settings/settings-spacing/package.json
@@ -37,5 +37,8 @@
   },
   "scripts": {
     "getName": "echo $npm_package_name"
+  },
+  "dependencies": {
+    "@bolt/tools-export-data": "^0.6.0-alpha.1ad5601e"
   }
 }
