--- a/package.json
+++ b/package.json
@@ -128,9 +128,11 @@
     "xo": "0.18.2"
   },
   "dependencies": {
+    "@kossnocorp/desvg": "0.2.0",
     "@polymer/polymer": "next",
     "@skatejs/renderer-preact": "^0.1.0",
     "@times-components/brightcove-video": "^1.4.0",
+    "@webcomponents/custom-elements": "1.0.4",
     "@webcomponents/shadycss": "^1.0.6",
     "@webcomponents/shadydom": "^1.0.6",
     "@webcomponents/webcomponentsjs": "^1.0.14",
@@ -146,8 +148,10 @@
     "babel-plugin-transform-es2015-spread": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-skate-flow-props": "0.0.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "6.24.1",
     "babel-traverse": "^6.24.1",
     "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
@@ -158,11 +162,15 @@
     "css-loader": "^0.28.7",
     "cz-conventional-changelog": "^2.0.0",
     "cz-lerna-changelog": "^1.2.1",
+    "desvg-loader": "0.1.0",
+    "document-register-element": "1.7.0",
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "feature-toggle": "^0.3.0",
     "flatten-packages": "^0.1.4",
+    "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "globby": "^6.1.0",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -177,12 +185,14 @@
     "lit-html": "^0.6.0",
     "lodash": "^4.17.4",
     "lozad": "^1.0.6",
+    "merge": "^1.2.0",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "node-sass-export": "0.0.2",
     "nodemon": "^1.12.1",
     "now-travis": "^1.0.1",
     "npm-run-all": "^4.0.2",
+    "npm-sass": "^2.2.1",
     "object-assign": "^4.1.1",
     "path": "^0.12.7",
     "pre-commit": "^1.2.2",
@@ -206,7 +216,11 @@
     "stylelint": "8.0.0",
     "stylelint-scss": "^2.0.1",
     "svg-injector": "^1.1.3",
-    "validate-commit-msg": "^2.12.2"
+    "svg-loader": "0.0.2",
+    "to-string-loader": "1.1.5",
+    "validate-commit-msg": "^2.12.2",
+    "web-component-refs": "0.0.2",
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "babel": {
     "presets": [
