--- a/src/_patterns/01-core/02-tools/tools-spacing/package.json
+++ b/src/_patterns/01-core/02-tools/tools-spacing/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@bolt/settings-spacing": "^0.7.0-alpha.1ad5601e",
-    "@bolt/tools-strip-unit": "^0.5.0-alpha.1ad5601e"
+    "@bolt/tools-strip-unit": "^0.5.0-alpha.1ad5601e",
+    "@bolt/tools-export-data": "^0.6.0-alpha.1ad5601e"
   }
 }
