--- a/src/_patterns/02-components/03-bolt-ordered-list/package.json
+++ b/src/_patterns/02-components/03-bolt-ordered-list/package.json
@@ -38,6 +38,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/settings-global": "^0.7.0-alpha.e2f447e3",
     "@bolt/settings-colors": "^0.4.0",
     "@bolt/settings-font-size": "^0.8.0-alpha.7f2394d7",
     "@bolt/settings-font-weight": "^0.8.0-alpha.7f2394d7",
