--- a/src/_patterns/02-components/04-bolt-unordered-list/package.json
+++ b/src/_patterns/02-components/04-bolt-unordered-list/package.json
@@ -38,6 +38,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/settings-global": "^0.7.0-alpha.e2f447e3",
     "@bolt/settings-colors": "^0.4.0",
     "@bolt/tools-color-palette": "^0.4.0",
     "@bolt/tools-spacing": "^0.4.0"
