--- a/src/_patterns/02-components/bolt-blockquote/package.json
+++ b/src/_patterns/02-components/bolt-blockquote/package.json
@@ -38,9 +38,9 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/settings-global": "^0.7.0-alpha.e2f447e3",
     "@bolt/settings-colors": "^0.4.0",
-    "@bolt/settings-global": "^0.4.0",
-    "@bolt/tools-color-palette": "^0.4.0",
-    "@bolt/tools-spacing": "^0.4.0"
+    "@bolt/tools-spacing": "^0.4.0",
+    "@bolt/tools-color-palette": "^0.4.0"
   }
 }
