WIP: action block items

--- a/src/_patterns/02-components/bolt-action-blocks/package.json
+++ b/src/_patterns/02-components/bolt-action-blocks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/components-action-block",
+  "name": "@bolt/components-action-blocks",
   "description": "Action Block Component in Bolt",
   "type": "pattern",
   "keywords": [
@@ -9,7 +9,7 @@
     "design system",
     "components"
   ],
-  "version": "0.2.0-alpha.1ad5601e",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -31,7 +31,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/action-block.scss",
+  "style": "src/action-blocks.scss",
   "publishConfig": {
     "access": "public"
   }
