--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "description": "Bolt + Pattern Lab Integration",
   "dependencies": {
     "@bolt/assets-web-fonts": "^0.2.0-alpha.1ad5601e",
-    "@bolt/components-action-block": "0.2.0-alpha.1ad5601e",
+    "@bolt/components-action-blocks": "0.0.0",
     "@bolt/components-background": "0.2.0-alpha.1ad5601e",
     "@bolt/components-band": "0.2.0-alpha.1ad5601e",
     "@bolt/components-blockquote": "0.0.0",
