style: action block and action blocks style update

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -1,11 +1,11 @@
+action_block:
+  filename: action-block.twig
+  path: src/_patterns/02-components/bolt-action-blocks/src/action-block.twig
+  namespace: '@bolt/action-block.twig'
 action_blocks:
   filename: action-blocks.twig
   path: src/_patterns/02-components/bolt-action-blocks/src/action-blocks.twig
   namespace: '@bolt/action-blocks.twig'
-action_blocks__item:
-  filename: action-blocks__item.twig
-  path: src/_patterns/02-components/bolt-action-blocks/src/action-blocks__item.twig
-  namespace: '@bolt/action-blocks__item.twig'
 all_headlines:
   filename: _all-headlines.twig
   path: src/_patterns/02-components/bolt-headline/demo/_all-headlines.twig
