feat: updating global icon styles + swapping out CDN shim as a temp workaround till build updated

--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "objects.scss",
+  "style": "components.scss",
   "publishConfig": {
     "access": "public"
   },
