--- a/src/_patterns/02-components/bolt-action-blocks/package.json
+++ b/src/_patterns/02-components/bolt-action-blocks/package.json
@@ -34,5 +34,16 @@
   "style": "src/action-blocks.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/settings-global": "^0.7.0-alpha.1ad5601e",
+    "@bolt/settings-spacing": "^0.7.0-alpha.1ad5601e",
+    "@bolt/settings-colors": "^0.6.0-alpha.1ad5601e",
+    "@bolt/settings-font-size": "^0.8.0-alpha.1ad5601e",
+    "@bolt/settings-font-weight": "^0.8.0-alpha.1ad5601e",
+    "@bolt/tools-font-size": "^0.5.0-alpha.1ad5601e",
+    "@bolt/tools-font-weight": "^0.5.0-alpha.1ad5601e",
+    "@bolt/tools-spacing": "^0.5.0-alpha.1ad5601e",
+    "@bolt/tools-color-palette": "^0.5.0-alpha.1ad5601e"
   }
 }
