docs: action blocks theming demo

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -6,6 +6,31 @@ action_blocks:
   filename: action-blocks.twig
   path: src/_patterns/02-components/bolt-action-blocks/src/action-blocks.twig
   namespace: '@bolt/action-blocks.twig'
+action_blocks__theme_demo:
+  filename: action-blocks--theme-demo.twig
+  path: >-
+    src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo.twig
+  namespace: '@bolt/action-blocks--theme-demo.twig'
+action_blocks__theme_demo__dark:
+  filename: action-blocks--theme-demo--dark.twig
+  path: >-
+    src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo--dark.twig
+  namespace: '@bolt/action-blocks--theme-demo--dark.twig'
+action_blocks__theme_demo__light:
+  filename: action-blocks--theme-demo--light.twig
+  path: >-
+    src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo--light.twig
+  namespace: '@bolt/action-blocks--theme-demo--light.twig'
+action_blocks__theme_demo__xdark:
+  filename: action-blocks--theme-demo--xdark.twig
+  path: >-
+    src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo--xdark.twig
+  namespace: '@bolt/action-blocks--theme-demo--xdark.twig'
+action_blocks__theme_demo__xlight:
+  filename: action-blocks--theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo--xlight.twig
+  namespace: '@bolt/action-blocks--theme-demo--xlight.twig'
 all_headlines:
   filename: _all-headlines.twig
   path: src/_patterns/02-components/bolt-headline/demo/_all-headlines.twig
