--- a/config/config.yml
+++ b/config/config.yml
@@ -88,6 +88,7 @@ plugins:
           - src/_patterns/02-components/03-bolt-ordered-list/src
           - src/_patterns/02-components/04-bolt-unordered-list/demo/theming
           - src/_patterns/02-components/04-bolt-unordered-list/src
+          - src/_patterns/02-components/bolt-action-blocks/demo/theming
           - src/_patterns/02-components/bolt-action-blocks/src
           - src/_patterns/02-components/bolt-background/demo
           - src/_patterns/02-components/bolt-background/src
